--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="funnel-container" id="funnelContainer">
 
         <!-- ===== ETAPA 1: LOGIN GAMIFICADO ===== -->
-        <section class="step active" id="step1" style="display: flex;">
+        <section class="step active" id="step1">
             <!-- PARTÍCULAS DE FUNDO -->
             <div class="particles" id="particles1"></div>
 
@@ -73,22 +73,11 @@
                     </button>
                 </form>
 
-                <!-- TELA DE SUCESSO -->
-                <div class="success-screen" id="successScreen1">
-                    <div class="success-icon"></div>
-                    <h2 class="success-title">Sistema Ativado!</h2>
-                    <p class="success-message">
-                        Seu acesso foi liberado! Agora você está pronto para embarcar nesta experiência única do Voxy Mix.
-                    </p>
-                    <button class="continue-button" onclick="goToStep(2)">
-                        Entrar na Experiência
-                    </button>
-                </div>
             </div>
         </section>
 
         <!-- ===== ETAPA 2: DNA MUSICAL ===== -->
-        <section class="step" id="step2" style="display: none;">
+        <section class="step" id="step2">
             <div class="main-container">
                 <div class="header">
                     <h1 class="title">Mixer de DNA Musical</h1>
@@ -186,7 +175,7 @@
         </section>
 
         <!-- ===== ETAPA 3: SEGMENTAÇÃO DINÂMICA ===== -->
-        <section class="step" id="step3" style="display: none;">
+        <section class="step" id="step3">
             <div class="main-container">
                 <div class="rack" id="mainRack" class="powered-off">
                     <div class="rack-header">
@@ -223,7 +212,7 @@
         </section>
 
         <!-- ===== ETAPA 4: MECANISMO ANTIGO COMUM ===== -->
-        <section class="step" id="step4" style="display: none;">
+        <section class="step" id="step4">
             <div class="main-container">
                 <div class="header">
                     <div class="progress-indicator">Etapa 4/7</div>
@@ -260,7 +249,7 @@
         </section>
 
         <!-- ===== ETAPA 5: PRESETS COMUNS ===== -->
-        <section class="step" id="step5" style="display: none;">
+        <section class="step" id="step5">
             <div class="main-container">
                 <div class="header">
                     <div class="progress-indicator">Etapa 5/7</div>
@@ -307,7 +296,7 @@
         </section>
 
         <!-- ===== ETAPA 6: PRESETS DINÂMICOS ===== -->
-        <section class="step" id="step6" style="display: none;">
+        <section class="step" id="step6">
             <div class="main-container">
                 <div class="header">
                     <div class="progress-indicator">Etapa 6/7</div>
@@ -373,7 +362,7 @@
         </section>
 
         <!-- ===== ETAPA 7: OFERTA ===== -->
-        <section class="step" id="step7" style="display: none;">
+        <section class="step" id="step7">
             <div class="main-container">
                 <!-- HERO SECTION -->
                 <section class="hero-section">
